[package]
name = "bypond"
version = "0.3.1"
edition = "2024"
authors = ["Lingxuan Ye <love@lingxuan.io>"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lingxuan-Ye/bypond"
readme = "README.md"
license = "MIT"
description = "A highly untested and undocumented complete tree library."
