[package]
name = "bypond"
version = "0.4.0"
edition = "2024"
authors = ["Lingxuan Ye <ink@lingxuan.io>"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Lingxuan-Ye/bypond"
readme = "README.md"
license = "MIT"
description = "A highly untested and undocumented complete tree library."
